correciones ingesta datos a tablas